Add h1 tag describing program in index.html
Telling the users how to view this project visually
would likely reduce confusion.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-
+        <h1>This is Rock Paper Scissors! Open up your browser console to play!</h1>
     </body>
 </html>
