Add game introduction elements to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <h1>This is Rock Paper Scissors! Open up your browser console to play!</h1>
+        <h1>Welcome to Rock Paper Scissors!</h1>
+        <h2>Would you like to proceed?</h2>
+        <button>Let's play!</button>
     </body>
 </html>
