--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Rock Paper Scissors Game</title>
         <meta charset="UTF-8">
         <script src="script.js" defer></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Welcome to Rock Paper Scissors!</h1>
